Update base_url to point to the blog

--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 [main]
-base_url = https://untode.su/
+base_url = https://untode.su/blog/
 title = untode.su
 description = Channeling thoughts through the Internet
 author = untodesu
